--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Z3N0 SLITHER — THE SERPENT REALM</title>
+<title>UNTITLED SNAKE GAME — MADE BY Z3N0</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
@@ -364,8 +364,8 @@ body::before{
     <div class="logo-wrap">
       <span class="owner-crown">👑</span>
       <div class="logo-z3n0">Z3N0</div>
-      <div class="logo-sub">SERPENT REALM · EST. 2024</div>
-      <div class="logo-owner-tag">CREATED & OWNED BY Z3N0 👑</div>
+      <div class="logo-sub">SNAKE REALM · EST. 2026</div>
+      <div class="logo-owner-tag">CREATED & OWNED BY Z3N0</div>
     </div>
 
     <div class="menu-panel">
@@ -390,7 +390,7 @@ body::before{
           <span class="input-label">🔐 Owner Code</span>
           <input class="game-input" id="ownerPass" type="password" placeholder="Enter owner password..." autocomplete="off">
         </div>
-        <button class="btn btn-primary" id="playBtn" style="margin-bottom:8px;">▶ ENTER THE REALM</button>
+        <button class="btn btn-primary" id="playBtn" style="margin-bottom:8px;">▶ PLAY</button>
         <div class="btn-row">
           <button class="btn btn-gold btn-sm" id="ownerToggleBtn">👑 OWNER</button>
           <button class="btn btn-sm" style="border:1px solid var(--border);color:var(--dim);" id="howToBtn">? HOW TO PLAY</button>
@@ -464,7 +464,7 @@ body::before{
 
     <!-- Z3N0 footer -->
     <div style="font-family:'Orbitron',monospace;font-size:9px;letter-spacing:4px;color:rgba(255,215,0,0.3);">
-      👑 Z3N0'S SERPENT REALM — ALL RIGHTS RESERVED
+      👑 Z3N0'S SNAKE GAME — ALL RIGHTS RESERVED
     </div>
   </div>
 </div>
@@ -489,10 +489,10 @@ body::before{
     <div class="boost-label" id="boostLabel">BOOST [HOLD CLICK]</div>
     <div class="boost-track"><div class="boost-fill" id="boostFill"></div></div>
   </div>
-  <div id="owner-tag-hud">👑 Z3N0 · SUPREME OWNER · CREATOR OF THIS REALM</div>
+  <div id="owner-tag-hud">👑 Z3N0 · SUPREME OWNER · CREATOR OF THIS GAME</div>
   <div id="eventBanner"><div class="event-title" id="eventTitle">EVENT ACTIVE</div></div>
   <div id="sysmsg"></div>
-  <div id="z3n0-watermark-game">Z3N0 · Z3N0 · Z3N0 · Z3N0 · Z3N0 · Z3N0</div>
+  <div id="z3n0-watermark-game">Z3N0</div>
 
   <!-- In-game cosmetics button -->
   <div id="inGameCosmeticsBtn" style="position:absolute;top:20px;left:320px;pointer-events:auto;display:none;">
@@ -554,7 +554,7 @@ body::before{
     <div class="owner-sidebar-header">
       <span class="crown-big">👑</span>
       <h2 class="crown-text">Z3N0</h2>
-      <p>SUPREME OWNER</p>
+      <p>OWNER</p>
     </div>
     <nav class="owner-nav">
       <button class="owner-nav-btn active" data-tab="dashboard"><span class="owner-nav-icon">📊</span><span>Dashboard</span></button>
